version/2.0/ripscrip/1.3-world-view-virtual-canvas.md
# 1.3 World View & Virtual Canvas

[◀ Prev: 1.2 Math & Coordinates](1.2-math-and-coordinates.md) · [Contents](README.md) · [Next: 1.4 Terminal & ANSI View ▶](1.4-terminal-ansi-view.md)

Drawing happens in world coordinates: the world frame is the logical space, the terminal maps it onto whatever physical resolution it runs at, and the current [drawing port](../../GLOSSARY.md)'s viewport clips what is drawn and sets its origin - the screen is simply port #0.

_The 1.54 model this generalizes - a single fixed 640×350 graphics window with a clipping viewport - is [1.3 in the v1.54 reference](../../1.54/ripscrip/1.3-world-view-virtual-canvas.md); a 1.54 scene runs unchanged under 2.x because the defaults reproduce that environment exactly._

## RIP_SET_WORLD_FRAME

_Added in RIPscrip v2.A0._

_Sets the coordinates for the World Frame_

|               |                     |
| ------------- | ------------------- |
| **Level**     | 0                   |
| **Command**   | `f`                 |
| **Arguments** | `x_dim:XY y_dim:XY` |

**Format:** `!|f <x_dim> <y_dim>` **Example:** `!|fSGSG`

**Attributes used:** Base Math (current setting)

This command sets the dimensions of the World Coordinate Frame. This Frame is the Global Coordinate Space of the RIPscrip drawing screen. It is not the exact size of the Device Frame - that is a lower level coordinate system. With this frame, you can "map" your scenes into something, say a 1024x1024 grid and let the terminal worry about mapping it into whatever device coordinates it is using (eg, 640x350, 800x600, etc). Any coordinates used for setting viewports or other such things will be specified in World Frame Coordinates. Actual drawing primitives will use the current Drawing Frame's coordinates - another level of coordinate mapping. This allows you to do things like draw full screen images inside a tinier window, leaving additional drawing space on the screen for other images.

The actual Device Coordinate Frame is not specified in the RIPscrip language anywhere - it is handled entirely by the remote terminal, because only it knows the device coordinates of the environment that it is running under (although the host can query these values from the terminal).

The `<x_dim>` parameter is how wide the drawing area is in logical coordinates. The `<y_dim>` parameter is how tall the drawing area is in logical coordinates. The maximum dimensions of the World Coordinate Frame are 65535×65535; the device/world coordinate-frame model behind them is described in [1.2 Math & Coordinates](1.2-math-and-coordinates.md#world-coordinate-systems).

### Translating World to Device Coordinates

To translate from World Coordinates to Device Coordinates, you need to know four things:

```text
1/2) The World Frame's dimensions (ie, x_dim and y_dim)
3/4) The dimensions of the actual display device (x_max, y_max)
```

After you have these four values, you can translate any X/Y coordinate pair in World Coordinates to Device Coordinates with the following equations:

```text
EQUATION 1 - TRANSLATE WORLD TO DEVICE COORDINATES
──────────────────────────────────────────────────

           ╔═══════════════════╤═══════════════════╗
           ║       Xw * x_max  │       Yw * y_max  ║
           ║  Xd = ──────────  │  Yd = ──────────  ║
           ║         x_dim     │         y_dim     ║
           ╚═══════════════════╧═══════════════════╝
```

Where (Xw,Yw) is a point in World Coordinates. We are solving for the point (Xd,Yd) which is in Device Coordinates. The values x_max and y_max are the physical dimensions of the display device (eg, x_max=640, y_max=350). The values x_dim and y_dim are the dimensions of the World Coordinate Frame (eg, x_dim=1000, y_dim=1000).

As an example, let's say we are drawing onto a 640x350 display device and our World Coordinate Frame is 1000x1000 logical pixels in size. If we plot a pixel at coordinates right in the middle of the screen at (500,500), here is what we would have:

```text
     500 * 640   320,000
Xd = ───────── = ─────── = 320
       1000       1000


     500 * 350   175,000
Yd = ───────── = ─────── = 175
       1000       1000
```

This gives us a final Device coordinate of (320,175) which is smack in the middle of the device screen as we wanted.

### Translating Device to World Coordinates

If we solve the above equations for Xw and Yw, we get the inverse equations - translations from Device Coordinates to World Coordinates:

```text
EQUATION 2 - TRANSLATE DEVICE TO WORLD COORDINATES
──────────────────────────────────────────────────

           ╔═══════════════════╤═══════════════════╗
           ║       Xd * x_dim  │       Yd * y_dim  ║
           ║  Xw = ──────────  │  Yw = ──────────  ║
           ║         x_max     │         y_max     ║
           ╚═══════════════════╧═══════════════════╝
```

### Precision of translation

If the World Coordinates are larger than the Device Coordinates, then when you translate World Coordinates to Device Coordinates, there will be pixel-perfect translation. This means that translation will be unambiguous - they will convert to pixel coordinates without there being any discrepency. For example, if your Device Coordinates are 640x350 and your World Coordinates are 1280x700, then a Point in World Coordinate space at (0,0) and (1,0) will both translate to the Device Coordinates (0,0) and (0,0) respectively. This is because the World Coordinate space is twice as large as the Device Coordinate space. If on the other hand the Device Coordinates were 1280x700 and the World Coordinate space were 640x350, then the World Points (0,0) and (1,0) would translate to (0,0) and (2,0) respectively. Notice that in the World Coordinates, the pixels were adjacent. But in the Device Coordinates, they are separated by a one pixel gap.

In summary, World Coordinates should always be equal to or greather than the size of the Device Coordinate Frame, otherwise disparity will exist in the translations. Since coordinate translation will almost ALWAYS be from World -> Device coordinates, everything will be fine if the World Frame has a larger resolution than the Device Frame. The same holds true for the inverse equations to translate from Device to World coordinates. If the World Coordinate Frame is larger than the Device Coordinate Frame, then any point that is translated from Device -> World Coordinates (a Mouse X/Y location for example), might not translate over precisely - skipping over pixel spaces in the World Frame - this is simply because of the precision of translation and cannot be overcome mathematically since a Mouse Pointer's location is pixel based - it doesn't have any finer locations than on pixel boundary locations (there's no such thing as a fractional pixel location in graphics hardware - only mathematically).

To maintain backward compatibility with previous versions of the RIPscrip specification, after a [RIP_RESET_WINDOWS](#rip_reset_windows) command is received, the World Coordinate Frame is defined as having the dimensions 640x350 until reset by a RIP_SET_WORLD_FRAME or [RIP_HEADER](1.1-protocol-and-command-hierarchy.md#rip_header) command.

## RIP_VIEWPORT

_Define the size & location of the Graphics Window_

|               |                           |
| ------------- | ------------------------- |
| **Level**     | 0                         |
| **Command**   | `v`                       |
| **Arguments** | `x0:XY y0:XY x1:XY y1:XY` |

**Format:** `!|v <x0> <y0> <x1> <y1>` **Example:** `!|v00002E1M`

**Attributes used:** Port, Base Math (current setting)

This command defines the (X,Y) pixel boundaries of the RIPscrip graphics window, which will contain all RIPscrip graphics output. ASCII/ANSI text will be displayed in the current TTY window defined by the [RIP_TEXT_WINDOW](1.4-terminal-ansi-view.md#rip_text_window) command above. (x0,y0) defines the upper-left corner of the graphics viewport, and (x1,y1) defines the lower-right corner (inclusive). The viewport may be deactivated, so RIPscrip graphics commands are ignored, by setting all parameters to zero (0).

The viewport is physically bound to the current [drawing port](7.0-drawing-ports.md). In other words when this command is executed, it will modify the viewport for the current drawing port. This in effect, modifies the clipping rectangle for that port. If any of the viewport coordinates would extend beyond the boundaries of the drawing port, they will be adjusted to fit inside the port. _(v2.A3)_

Graphics displayed in the viewport are "truncated" at this rectangular border, meaning if a circle would normally extend outside one of the borders, it will be chopped, only displaying the portion of the circle that is contained inside the viewport boundaries.

Coordinates that specify the boundary of the Graphics Viewport are specified in World Coordinates. The interior area of the Viewport is then considered the Drawing Frame. The Drawing Coordinate frame are set to the same size/dimension as the World Coordinate Frame area that the viewport inhabits. For example, if you define a viewport from (100,100) to (299,299) in World Coordinates, then your Drawing Frame will be a drawing area with a resolution of 200x200 logical drawing pixels. In other words, when you set a viewport, you immediately have a 1:1 mapping of logical drawing pixels to World Coordinate Pixels. If you wish to change the X/Y Drawing Frame resolution to some other value, use the RIP_SET_DRAWING_FRAME command after setting the viewport. If you draw anything before executing this command, then the privimitives will be drawing things in the current Drawing Frame's coordinates (a sub-set of the World Coordinates). The Drawing Frame's coordinates do not take on another mapping until you actually set them with a RIP_SET_DRAWING_FRAME command. _(v2.A0)_

To re-activate a viewport that was previously deactivated, either send a correctly configured RIP_SET_VIEWPORT command, or issue a query command with a `$AVP$` [text variable](5.1-text-variables.md) (Activate ViewPort). _(v2.A4)_

No RIP_SET_DRAWING_FRAME command exists anywhere in the specification; the 1:1 mapping above is the only drawing-frame behavior actually defined. See [ERRATA.md](ERRATA.md#13-world-view--virtual-canvas) for the history.

## RIP_ERASE_VIEW

_Clear Graphics Window to current background color_

|               |          |
| ------------- | -------- |
| **Level**     | 0        |
| **Command**   | `E`      |
| **Arguments** | `<none>` |

**Format:** `!|E` **Example:** `!|E`

**Attributes used:** Back Color, Port, Base Math (N/A)

This command clears the Graphics Viewport to the current graphics background color. If the graphics viewport is not active (if the boundaries are 0,0,0,0), then this command is ignored. If the text and graphics windows overlap, then this command will clear the overlapping text window portion(s) also.

## RIP_RESET_WINDOWS

_Clear Graphic/Text Windows & reset to full screen_

|               |          |
| ------------- | -------- |
| **Level**     | 0        |
| **Command**   | `*`      |
| **Arguments** | \<none\> |

**Format:** `!|*` **Example:** `!|*`

**Attributes used:** Port

A system might use this function before entering a text-only mode that does not support RIP commands.

This command will:

- Set the World Coordinate Frame to 640x350 (backwards compat.)
- Set the Text Window to a full screen
- Set the Text Window to the user-selected default of the five Text Window fonts (80x43, 91x43, 80x25, 91x25, and 40x25) and place the text cursor in the upper left corner.
- Restore the default RIP color palette (see [RIP_SET_PALETTE](2.0-color-modes-and-palettes.md#rip_set_palette) and [RIP_SET_DRAWING_PALETTE](2.0-color-modes-and-palettes.md#rip_set_drawing_palette) below).
- Clear the entire screen to the current background color (which is black because the color palette was just reset!)
- Delete all Mouse Fields and Mouse Buttons
- Delete ports #1-35 (unprotected) - port #0 is made full screen
- Reset all graphical style data tables and Text Window data tables to suitable defaults.
- All "active data table entries" are set to entry #0 current slots are set to slot #0.
- Reset all button style data tables
- Set the mouse cursor back to the default arrow pointer. See [RIP_SET_MOUSE_CURSOR](4.2-mouse-fields-and-pointer.md#rip_set_mouse_cursor) for details.
- Set the current Base Math to Base-36 (meganums).
- Set the coordinate size to 2 byte MegaNums
- Set the color palette to map mode (not Direct RGB encoding).

**NOTE:** The data backup areas are not cleared by this command. _(v2.A3)_

## Viewports and Text Windows - Overlapping Issues

_Added in RIPscrip v2.A1; revised in v2.A3._

Since there are multiple text windows and [ports](7.0-drawing-ports.md) (with their viewports) allowed in the RIPscrip specification, some elaboration needs to be made on what happens if any overlap each other. Very simple, they do what they have always done - draw text, or draw graphics. For example, if a viewport overlaps a text window and you draw some graphics (say a circle) over the top of some text in a text window, and the text window subsequently scrolls, all or part of the circle could scroll with it! Now, of course, from the viewport's standpoint, the graphics are no longer what you originally sent to the viewport, but that doesn't matter - you don't preserve any of the commands you used to create the graphics - you simply draw the graphics and that's it. So with this in mind, even if multiple viewports overlap each other it doesn't matter because the final result is what's on the screen - doing things in one viewport might do some overlapping graphics in another viewport but that is alright.

If a text window overlaps another text window, the same thing happens. To a RIPscrip terminal, text is simply just a piece of graphical information that is being placed on the screen in a formatted fashion. If two text windows overlap and text is placed on an area that overlap the other window, then you will be drawing graphics (essentially) on top of another text window. The same thing as the circle example above would happen if that text window scrolled.

---

[◀ Prev: 1.2 Math & Coordinates](1.2-math-and-coordinates.md) · [Contents](README.md) · [Next: 1.4 Terminal & ANSI View ▶](1.4-terminal-ansi-view.md)
